kubernetes/gitops/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: argocd
  namespace: argocd

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTP":80},{"HTTPS":443}]

    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:076124125794:certificate/24fda8df-19b5-45c8-88a1-d17cdd82bef1

    external-dns.alpha.kubernetes.io/hostname: argocd.ajay.bar

spec:

  ingressClassName: alb

  rules:

  - host: argocd.ajay.bar

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: argocd-server

            port:

              number: 80
